--- a/booklet.html
+++ b/booklet.html
@@ -56,6 +56,14 @@
                     <i class="fas fa-sign-in-alt"></i>
                     ورود / عضویت
                 </a></li>
+                <li class="pull-right"><a href="userProfile.html" class="normalFontSize2 text-right rtl btn btn-round btn-rose">
+                    <i class="fas fa-sign-in-alt"></i>
+                    پروفایل کاربر
+                </a></li>
+                <li class="pull-right"><a href="#" class="normalFontSize2 text-right rtl btn btn-round btn-info">
+                    <i class="fas fa-sign-in-alt"></i>
+                    پروفایل ادمین کافه
+                </a></li>
             </ul>
 
 
