--- a/userProfile.html
+++ b/userProfile.html
@@ -1,10 +1,360 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="height:100%">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8"/>
+    <!--<link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">-->
+    <link rel="icon" type="image/png" href="assets/img/sneedsLogo.png">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+
+    <title>جزوات اسنیدز، مرجع رفع نیاز های دانشجویی</title>
+
+    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
+
+    <!--     Fonts and icons     -->
+    <link rel="stylesheet" type="text/css"
+          href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"/>
+
+    <!-- CSS Files -->
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="assets/css/material-kit.css?v=1.2.1" rel="stylesheet"/>
+    <link rel="stylesheet" href="assets/css/sneedsCustom.css">
     <title>Title</title>
 </head>
 <body>
+<nav class="navbar navbar-right navbar-transparent navbar-fixed-top" role="navigation">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+
+            <a class="navbar-brand serifFont" href="http://www.sneeds.ir" target="_blank">
+                    <span class="serifFont brandName float-right">
+                        اسنیدز
+                    </span>
+                <span class="brandLogo float-left">
+                        <img src="assets/img/sneedsLogo.png" alt="sneeds logo" class="img-responsive">
+                    </span>
+            </a>
+        </div>
+
+        <div class="collapse navbar-collapse yekanFont" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right text-right rtl">
+                <li class="pull-right"><a href="#">صفحه اول</a></li>
+                <li class="pull-right"><a href="bookletList.html">جزوات</a></li>
+                <li class="pull-right"><a href="cafeList.html">کافه ها</a></li>
+                <li class="pull-right"><a href="booklet.html">صفحه تکی جزوه</a></li>
+                <li class="pull-right active"><a href="cafe.html">صفحه تکی کافه</a></li>
+                <li class="pull-right"><a href="#" target="">لینک تست 1</a></li>
+                <li class="pull-right"><a href="auth.html"
+                                          class="normalFontSize2 text-right rtl btn btn-round btn-primary">
+                    <i class="fas fa-sign-in-alt"></i>
+                    ورود / عضویت
+                </a></li>
+                <li class="pull-right"><a href="userProfile.html"
+                                          class="normalFontSize2 text-right rtl btn btn-round btn-rose">
+                    <i class="fas fa-sign-in-alt"></i>
+                    پروفایل کاربر
+                </a></li>
+                <li class="pull-right"><a href="#" class="normalFontSize2 text-right rtl btn btn-round btn-info">
+                    <i class="fas fa-sign-in-alt"></i>
+                    پروفایل ادمین کافه
+                </a></li>
+            </ul>
+
+
+            <form class="navbar-form navbar-left bookletSearchForm" role="search">
+                <div class="form-group form-primary">
+                    <input type="text" class="form-control yekanFont" style="width:200px"
+                           value="جستجوی سریع در کل سایت" id="siteFastSearch">
+                </div>
+                <button type="submit" class="btn btn-default btn-sm yekanFont">بگرد</button>
+            </form>
+
+        </div>
+    </div>
+</nav>
+
+<div class="page-header header-filter header-small" data-parallax="true"
+     style="background-image: url(assets/img/cafe.jpg); transform: translate3d(0px, 0px, 0px);">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 col-md-offset-2">
+                <div class="brand">
+                    <h1 class="title yekanFont rtl">هادی گرامی، خوش آمدید</h1>
+                    <h3 class="yekanFont rtl">
+                        با اسنیدز همراه باشید...
+                    </h3>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="main main-raised">
+    <div class="section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <ul class="pagination pagination-primary yekanFont">
+                        <!--<li id="goPrevPage"><a href="#">></a></li>-->
+                        <!--<li><a href="#"></a></li>-->
+                        <li class="active"><a href="#">پروفایل کاربر</a></li>
+                        <li><a href="#">/</a></li>
+                        <li><a href="#">صفحه اول</a></li>
+                        <li><a href="#">مسیر شما : </a></li>
+                        <!--<li id="goNextPage"><a href="#"><</a></li>-->
+                    </ul>
+                </div>
+            </div>
+
+            <!--<h2 class="section-title yekanFont rtl text-right">لیست کافه ها</h2>-->
+            <hr>
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <div class="btn-group yekanFont" role="group" aria-label="Basic example">
+                        <a type="button" class="btn btn-danger">خروج از حساب</a>
+                        <a type="button" class="btn btn-secondary" data-toggle="collapse"
+                           data-target="#collapseExample3" aria-expanded="false"
+                           aria-controls="collapseExample">تنظیمات</a>
+                        <a type="button" class="btn btn-secondary" data-toggle="collapse"
+                           data-target="#collapseExample2" aria-expanded="false" aria-controls="collapseExample">تخفییفات
+                            کافه</a>
+                        <a type="button" class="btn btn-secondary" data-toggle="collapse" data-target="#collapseExample"
+                           aria-expanded="false" aria-controls="collapseExample">مشاهده پروفایل</a>
+                        <a type="button" class="btn btn-success">عملیات ها :</a>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="collapse" id="collapseExample">
+                        <div class="card card-body">
+                            پروفایل کاربر
+                        </div>
+                    </div>
+                    <div class="collapse" id="collapseExample2" style="box-shadow:0 !important;">
+                        <div class="card card-body">
+                            <div class="table-responsive">
+                                <table class="table yekanFont">
+                                    <thead>
+                                    <tr>
+                                        <th class="text-center">#</th>
+                                        <th class="text-right">اسم کافه</th>
+                                        <th class="text-right">کد تخفیف</th>
+                                        <th class="text-right">تاریخ ایجاد کد</th>
+                                        <th class="text-right">وضعیت کد</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    <tr>
+                                        <td class="text-center">1</td>
+                                        <td>کافه اسنیدز</td>
+                                        <td>3987535897</td>
+                                        <td>2019</td>
+                                        <td class="td-actions text-right">
+                                            <button type="button" rel="tooltip" class="btn btn-success yekanFont"
+                                                    data-original-title="" title="">
+                                                قابل استفاده
+                                                <!--<i class="material-icons">edit</i>-->
+                                            </button>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td class="text-center">2</td>
+                                        <td>کافه تست</td>
+                                        <td>398asghar7</td>
+                                        <td>2013</td>
+                                        <td class="td-actions text-right">
+                                            <button type="button" rel="tooltip" class="btn btn-success yekanFont"
+                                                    data-original-title="" title="">
+                                                قابل استفاده
+                                                <!--<i class="material-icons">edit</i>-->
+                                            </button>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td class="text-center">3</td>
+                                        <td>کافه تست 2</td>
+                                        <td>398753cafe5897</td>
+                                        <td>2019</td>
+                                        <td class="td-actions text-right">
+                                            <button type="button" rel="tooltip" class="btn btn-danger yekanFont"
+                                                    data-original-title="" title="">
+                                                مصرف شده
+                                                <!--<i class="material-icons">edit</i>-->
+                                            </button>
+                                        </td>
+                                    </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                            <div class="alert alert-info">
+                                <!--<div class="container-fluid">-->
+                                <div class="alert-icon pull-right"
+                                     style="margin-right:5px !important;margin-left:15px !important;">
+                                    <i class="material-icons">info_outline</i>
+                                </div>
+                                <button type="button" class="close pull-left" data-dismiss="alert" aria-label="Close"
+                                        style="margin-right:15px !important;margin-left:5px !important;">
+                                    <span aria-hidden="true"><i class="material-icons">clear</i></span>
+                                </button>
+                                <p class="text-justify yekanFont normalFontSize">
+                                    توجه : فقط تخفیفاتی که استفاده نشده اند قابلیت استفاده دارند، برای دریافت کد تخفیف به صفحه کافه ها مراجعه کنید
+                                </p>
+                                <!--</div>-->
+                            </div>
+                        </div>
+                    </div>
+                    <div class="collapse" id="collapseExample3">
+                        <div class="card card-body">
+                            تنظیمات
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <hr>
+        </div>
+    </div><!-- section -->
+
+</div>
+
+<footer class="footer footer-black footer-big">
+    <div class="container">
+        <div class="content">
+            <div class="row rtl text-right">
+                <div class="col-md-4">
+                    <h5 class="yekanFont">آخرین های اینستاگرام اسنیدز</h5>
+                    <div class="gallery-feed">
+                        <img src="assets/img/faces/card-profile6-square.jpg" class="img img-raised img-rounded"
+                             alt="img1">
+                        <img src="assets/img/faces/christian.jpg" class="img img-raised img-rounded" alt="img2">
+                        <img src="assets/img/faces/card-profile4-square.jpg" class="img img-raised img-rounded"
+                             alt="img3">
+                        <img src="assets/img/faces/card-profile1-square.jpg" class="img img-raised img-rounded"
+                             alt="img4">
+
+                        <img src="assets/img/faces/marc.jpg" class="img img-raised img-rounded" alt="img5">
+                        <img src="assets/img/faces/kendall.jpg" class="img img-raised img-rounded" alt="img6">
+                        <img src="assets/img/faces/card-profile5-square.jpg" class="img img-raised img-rounded"
+                             alt="img7">
+                        <img src="assets/img/faces/card-profile2-square.jpg" class="img img-raised img-rounded"
+                             alt="img8">
+                    </div>
+
+                </div>
+
+                <div class="col-md-4 ">
+                    <h5 class="yekanFont">اسنیدز در رسانه ها</h5>
+                    <div class="social-feed yekanFont rtl text-justify">
+                        <div class="feed-line">
+                            <i class="fa fa-twitter"></i>
+                            <p class="miniRightSpace">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با
+                                استفاده از طراحان</p>
+                        </div>
+                        <div class="feed-line">
+                            <i class="fa fa-twitter"></i>
+                            <p class="miniRightSpace"> لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و
+                                با استفاده از طراحان</p>
+                        </div>
+                        <div class="feed-line">
+                            <i class="fa fa-facebook-square"></i>
+                            <p class="miniRightSpace"> لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و
+                                با استفاده از طراحان</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <h5 class="yekanFont">درباره اسنیدز</h5>
+                    <p class="yekanFont text-justify">
+                        لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان
+                        گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و
+                        برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی
+                        می باشد.
+                    </p>
+                </div>
+
+            </div>
+        </div>
+
+
+        <hr>
+
+        <ul class="pull-right rtl text-right yekanFont normalFontSize">
+            <li>
+                <a href="#">
+                    لینک تست 1
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    لینک تست 2
+
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    لینک تست 3
+
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    لینک تست 4
+
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    لینک تست 5
+                </a>
+            </li>
+        </ul>
+
+        <div class="copyright pull-left">
+            Copyright ©
+            <script>document.write(new Date().getFullYear())</script>
+            Sneeds Co. All Rights Reserved
+        </div>
+
+    </div>
+</footer>
 
 </body>
+<!--   Core JS Files   -->
+<script src="assets/js/jquery.min.js" type="text/javascript"></script>
+<script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
+<script src="assets/js/material.min.js"></script>
+
+<!--    Plugin for Date Time Picker and Full Calendar Plugin   -->
+<script src="assets/js/moment.min.js"></script>
+
+<!--	Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/   -->
+<script src="assets/js/nouislider.min.js" type="text/javascript"></script>
+
+<!--	Plugin for the Datepicker, full documentation here: https://github.com/Eonasdan/bootstrap-datetimepicker   -->
+<script src="assets/js/bootstrap-datetimepicker.js" type="text/javascript"></script>
+
+<!--	Plugin for Select, full documentation here: http://silviomoreto.github.io/bootstrap-select   -->
+<script src="assets/js/bootstrap-selectpicker.js" type="text/javascript"></script>
+
+<!--	Plugin for Tags, full documentation here: http://xoxco.com/projects/code/tagsinput/   -->
+<script src="assets/js/bootstrap-tagsinput.js"></script>
+
+<!--	Plugin for Fileupload, full documentation here: http://www.jasny.net/bootstrap/javascript/#fileinput   -->
+<script src="assets/js/jasny-bootstrap.min.js"></script>
+
+<!--    Plugin For Google Maps   -->
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
+
+
+<!--    Control Center for Material Kit: activating the ripples, parallax effects, scripts from the example pages etc    -->
+<script src="assets/js/material-kit.js?v=1.2.1" type="text/javascript"></script>
+<script src="assets/js/sneedsCustom.js" type="application/javascript"></script>
 </html>
