--- a/userProfile.html
+++ b/userProfile.html
@@ -134,14 +134,14 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="collapse" id="collapseExample">
-                        <div class="card card-body">
+                        <div class="card card-body" style="box-shadow:none !important;">
                             پروفایل کاربر
                         </div>
                     </div>
-                    <div class="collapse" id="collapseExample2" style="box-shadow:0 !important;">
-                        <div class="card card-body">
+                    <div class="collapse" id="collapseExample2">
+                        <div class="card card-body" style="box-shadow:none !important;">
                             <div class="table-responsive">
-                                <table class="table yekanFont">
+                                <table class="table table-striped yekanFont">
                                     <thead>
                                     <tr>
                                         <th class="text-center">#</th>
@@ -212,7 +212,7 @@
                         </div>
                     </div>
                     <div class="collapse" id="collapseExample3">
-                        <div class="card card-body">
+                        <div class="card card-body" style="box-shadow:none !important;">
                             تنظیمات
                         </div>
                     </div>
