sneeds logo fixed on ther right of top nav, breadcrumb fixed with new styles

--- a/auth.html
+++ b/auth.html
@@ -34,7 +34,7 @@
 
 <nav class="navbar navbar-right navbar-transparent navbar-fixed-top" role="navigation">
     <div class="container-fluid">
-        <div class="navbar-header">
+        <div class="navbar-header pull-right">
             <button type="button" class="navbar-toggle" data-toggle="collapse"
                     data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span>
@@ -91,7 +91,19 @@
 
 <div class="page-header header-filter" style="background-image: url('assets/img/bg3.jpg'); background-size: cover; background-position: top center;">
     <div class="container">
-        <div class="row rtl">
+
+        <div class="row">
+            <div class="col-md-12" style="margin-bottom:30px;">
+                <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb yekanFont">
+                        <li class="breadcrumb-item"><a href="#">صفحه اول</a></li>
+                        <li class="breadcrumb-item active" aria-current="page">ورود-ثبت ناملهف</li>
+                    </ol>
+                </nav>
+            </div>
+        </div>
+
+        <div class="row">
             <!--<div class="col-md-1"></div>-->
             <div class="col-md-5">
                 <div class="card card-signup" style="margin-bottom:0 !important;">
@@ -248,8 +260,11 @@
                     </form>
                 </div>
             </div>
-
         </div>
+
+
+
+
     </div>
 </div>
 <footer class="footer footer-black footer-big">
