--- a/bookletList.html
+++ b/bookletList.html
@@ -30,7 +30,7 @@
 
 <nav class="navbar navbar-right navbar-transparent navbar-fixed-top" role="navigation">
     <div class="container-fluid">
-        <div class="navbar-header">
+        <div class="navbar-header pull-right">
             <button type="button" class="navbar-toggle" data-toggle="collapse"
                     data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span>
@@ -212,21 +212,19 @@
     <!-- you can use the class main-raised if you want the main area to be as a page with shadows -->
     <div class="main">
         <div class="container">
+
             <div class="row">
-                <div class="col-md-12 text-center">
-                    <ul class="pagination pagination-primary yekanFont">
-                        <!--<li id="goPrevPage"><a href="#">></a></li>-->
-                        <!--<li><a href="#"></a></li>-->
-                        <li class="active"><a href="#">مهندسی کامپیوتر</a></li>
-                        <li><a href="#">/</a></li>
-                        <li><a href="#">جزوات</a></li>
-                        <li><a href="#">/</a></li>
-                        <li><a href="#">صفحه اول</a></li>
-                        <li><a href="#">مسیر شما : </a></li>
-                        <!--<li id="goNextPage"><a href="#"><</a></li>-->
-                    </ul>
+                <div class="col-md-12" style="margin-top:20px;">
+                    <nav aria-label="breadcrumb">
+                        <ol class="breadcrumb yekanFont">
+                            <li class="breadcrumb-item"><a href="#">صفحه اول</a></li>
+                            <li class="breadcrumb-item"><a href="#">جزوات</a></li>
+                            <li class="breadcrumb-item active" aria-current="page">مهندسی کامپیوتر</li>
+                        </ol>
+                    </nav>
                 </div>
             </div>
+
             <div class="row">
                 <!--<div class="col-md-6 text-center">-->
                 <!--<button class="btn btn-info yekanFont w-100" style="font-size:20px;" data-toggle="modal"-->
