--- a/cafe.html
+++ b/cafe.html
@@ -111,7 +111,7 @@
 <body class="product-page">
 <nav class="navbar navbar-right navbar-transparent navbar-fixed-top" role="navigation">
     <div class="container-fluid">
-        <div class="navbar-header">
+        <div class="navbar-header pull-right">
             <button type="button" class="navbar-toggle" data-toggle="collapse"
                     data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span>
@@ -166,35 +166,32 @@
     </div>
 </nav>
 
-<div class="page-header header-filter" data-parallax="true" filter-color="primary"
-     style="background-image: url('assets/img/cafe.jpg'); transform: translate3d(0px, 0px, 0px);">
+<div class="page-header header-filter" data-parallax="true" filter-color="primary" style="background-image: url('assets/img/cafe.jpg'); transform: translate3d(0px, 0px, 0px);">
     <div class="container">
         <div class="row title-row">
             <div class="col-md-4 col-md-offset-8">
                 <!--<button class="btn btn-white pull-right"><i class="material-icons">shopping_cart</i> 0 Items</button>-->
             </div>
         </div>
+
+        <div class="row">
+            <div class="col-md-12">
+                <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb yekanFont">
+                        <li class="breadcrumb-item"><a href="#">صفحه اول</a></li>
+                        <li class="breadcrumb-item"><a href="#">کافه ها</a></li>
+                        <li class="breadcrumb-item active" aria-current="page">کافه اسنیدز</li>
+                    </ol>
+                </nav>
+            </div>
+        </div>
+
     </div>
 </div>
 
 <div class="section section-gray">
     <div class="container">
         <div class="main main-raised main-product">
-            <div class="row">
-                <div class="col-md-12 text-center">
-                    <ul class="pagination pagination-primary yekanFont">
-                        <!--<li id="goPrevPage"><a href="#">></a></li>-->
-                        <!--<li><a href="#"></a></li>-->
-                        <li class="active"><a href="#">کافه اسنیدز</a></li>
-                        <li><a href="#">/</a></li>
-                        <li><a href="#">کافه ها</a></li>
-                        <li><a href="#">/</a></li>
-                        <li><a href="#">صفحه اول</a></li>
-                        <li><a href="#">مسیر شما : </a></li>
-                        <!--<li id="goNextPage"><a href="#"><</a></li>-->
-                    </ul>
-                </div>
-            </div>
 
             <div class="row">
                 <div class="col-md-6 col-sm-6">
