--- a/cafeList.html
+++ b/cafeList.html
@@ -27,7 +27,7 @@
 <nav class="navbar navbar-right navbar-transparent navbar-fixed-top"
      role="navigation">
     <div class="container-fluid">
-        <div class="navbar-header">
+        <div class="navbar-header pull-right">
             <button type="button" class="navbar-toggle" data-toggle="collapse"
                     data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span>
@@ -98,20 +98,21 @@
 </div>
 
 
+
 <div class="main main-raised">
+
     <div class="section">
+
         <div class="container">
+
             <div class="row">
-                <div class="col-md-12 text-center">
-                    <ul class="pagination pagination-primary yekanFont">
-                        <!--<li id="goPrevPage"><a href="#">></a></li>-->
-                        <!--<li><a href="#"></a></li>-->
-                        <li class="active"><a href="#">کافه ها</a></li>
-                        <li><a href="#">/</a></li>
-                        <li><a href="#">صفحه اول</a></li>
-                        <li><a href="#">مسیر شما : </a></li>
-                        <!--<li id="goNextPage"><a href="#"><</a></li>-->
-                    </ul>
+                <div class="col-md-12">
+                    <nav aria-label="breadcrumb">
+                        <ol class="breadcrumb yekanFont">
+                            <li class="breadcrumb-item"><a href="#">صفحه اول</a></li>
+                            <li class="breadcrumb-item active" aria-current="page">کافه ها</li>
+                        </ol>
+                    </nav>
                 </div>
             </div>
 
