--- a/userProfile.html
+++ b/userProfile.html
@@ -24,7 +24,7 @@
 <body>
 <nav class="navbar navbar-right navbar-transparent navbar-fixed-top" role="navigation">
     <div class="container-fluid">
-        <div class="navbar-header">
+        <div class="navbar-header pull-right">
             <button type="button" class="navbar-toggle" data-toggle="collapse"
                     data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span>
