mistype bug fixed

--- a/auth.html
+++ b/auth.html
@@ -97,7 +97,7 @@
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb yekanFont">
                         <li class="breadcrumb-item"><a href="#">صفحه اول</a></li>
-                        <li class="breadcrumb-item active" aria-current="page">ورود-ثبت ناملهف</li>
+                        <li class="breadcrumb-item active" aria-current="page">ورود-ثبت نام</li>
                     </ol>
                 </nav>
             </div>
