mistype bugs fixed and cafe admin page similar to user page created

--- a/cafeAdmin.html
+++ b/cafeAdmin.html
@@ -124,10 +124,11 @@
                            data-target="#collapseExample3" aria-expanded="false"
                            aria-controls="collapseExample">تنظیمات</a>
                         <a type="button" class="btn btn-secondary" data-toggle="collapse"
-                           data-target="#collapseExample2" aria-expanded="false" aria-controls="collapseExample">تخفیفات
-                            کافه</a>
-                        <a type="button" class="btn btn-secondary" data-toggle="collapse" data-target="#collapseExample"
-                           aria-expanded="false" aria-controls="collapseExample">مشاهده پروفایل</a>
+                           data-target="#collapseExample2" aria-expanded="false" aria-controls="collapseExample">
+                            تخفیفات کافه شما
+                        </a>
+                        <!--<a type="button" class="btn btn-secondary" data-toggle="collapse" data-target="#collapseExample"-->
+                           <!--aria-expanded="false" aria-controls="collapseExample">مشاهده پروفایل</a>-->
                         <a type="button" class="btn btn-success">عملیات ها :</a>
                     </div>
                 </div>
